create github pages

--- a/index.html
+++ b/index.html
@@ -294,38 +294,34 @@
                     
                 </div>
                 <div class="address">
-                    <h3 class="address-title mbr-fonts-style pb-2 align-center display-7">
+                    <h3 class="address-title mbr-fonts-style pb-2 align-center display-7"><strong>
                         Address
-                    </h3>
+                    </strong></h3>
                     <p class="address-block mbr-fonts-style pb-3 align-center mbr-text display-4">101 maple avenue, Newark, US, 07112</p>
                 </div>
                 <div class="contacts">
-                    <h3 class="contacts-title mbr-fonts-style pb-2 align-center display-7">
-                        Contacts
-                    </h3>
-                    <p class="contacts-block mbr-fonts-style align-center mbr-text display-4">
-                        Email: support@mobirise.com<br>
-                        Phone: +17188443624<br><br></p>
+                    <h3 class="contacts-title mbr-fonts-style pb-2 align-center display-7"><strong>
+                        Contact</strong></h3>
+                    <p class="contacts-block mbr-fonts-style align-center mbr-text display-4">Phone: +17188443624<br><br></p>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 opening-hours pb-3 align-center">
-                <h3 class="opening-hours-title pb-3 mbr-fonts-style align-center display-7">
-                    OPENING HOURS</h3>
+                <h3 class="opening-hours-title pb-3 mbr-fonts-style align-center display-7"><strong>
+                    OPENING HOURS</strong></h3>
                 <div class="col-5 days-column mbr-fonts-style mbr-bold align-right mbr-text display-4">
                     <span>Monday</span>
                     <span>Tuesday</span>
                     <span>Wednesday</span>
                     <span>Thursday</span>
                     <span>Friday</span>
-                    <span>Saturday</span><br>
+                    <span>Saturday</span><span>Sunday</span><br>
                 </div>
                 <div class="col-5 hours-column mbr-fonts-style align-left mbr-text display-4">
-                    <span>11:00 - 18:00</span>
-                    <span>11:00 - 18:00</span>
-                    <span>11:00 - 18:00</span>
-                    <span>11:00 - 18:00</span>
-                    <span>11:00 - 18:00</span>
-                    <span>11:00 - 18:00</span><br>
+                    <span>9am - 9pm</span>
+                    <span>9am - 9pm</span>
+                    <span>9am - 9pm</span>
+                    <span>9am - 9pm</span>
+                    <span>9am - 9pm</span>9am - 9pm<br><span>9am - 9pm</span><br>
                 </div>
             </div>
             
