create github pages

--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
                     </a>
                 </li></ul>
             
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-info display-4" href="https://mobirise.com">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://mobirise.com">
                   Get In Touch
-                </a>
-            </div>
+                </a></div>
       </div>
     </nav>
 </section>
@@ -297,12 +295,12 @@
                     <h3 class="address-title mbr-fonts-style pb-2 align-center display-7"><strong>
                         Address
                     </strong></h3>
-                    <p class="address-block mbr-fonts-style pb-3 align-center mbr-text display-4">101 maple avenue, Newark, US, 07112</p>
+                    <p class="address-block mbr-fonts-style pb-3 align-center mbr-text display-4"><a href="https://goo.gl/maps/PpaA7g99D56BS32LA" target="_blank" class="text-danger">101 maple avenue, Newark, US, 07112</a></p>
                 </div>
                 <div class="contacts">
                     <h3 class="contacts-title mbr-fonts-style pb-2 align-center display-7"><strong>
                         Contact</strong></h3>
-                    <p class="contacts-block mbr-fonts-style align-center mbr-text display-4">Phone: +17188443624<br><br></p>
+                    <p class="contacts-block mbr-fonts-style align-center mbr-text display-4">Phone: <a href="tel:+17188443624" class="text-danger">+17188443624</a><br><br></p>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 opening-hours pb-3 align-center">
