create github pages

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
                     </a>
                 </li></ul>
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://mobirise.com">
-                  Get In Touch
-                </a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://mobirise.com">BOOK NOW</a></div>
       </div>
     </nav>
 </section>
@@ -91,7 +89,7 @@
         <h1 class="mbr-section-title mbr-fonts-style mbr-bold pb-2 display-2"><br>Mamacita Hair Braiding</h1>
         <div class="typed-text display-7">
             <span class="mbr-text pb-4 mbr-fonts-style mbr-bold display-7">We offer the </span>
-            <span class="animated-element mbr-bold" data-word1="latest styles!" data-word2="trending styles!" data-word3="keep it minimalist." data-word4="Lorem Ipsum" data-word5="Lorem Ipsum" data-speed="39" data-words="2">
+            <span class="animated-element mbr-bold" data-word1="latest styles" data-word2="trending styles!" data-word3="keep it minimalist." data-word4="Lorem Ipsum" data-word5="Lorem Ipsum" data-speed="39" data-words="2">
             </span>
         </div>
         <div class="mbr-section-btn pt-5"><a class="btn btn-lg btn-danger display-4" href="index.html#extFeatures8-3">BOOK NOW</a></div>
