create github pages

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                     </a>
                 </div>
                 <div class="social-list pb-3 align-center">
-                    <h3 class="follow-title mbr-fonts-style pb-2 align-center display-4"><strong>
-                        FOLLOW</strong></h3>
+                    <h3 class="follow-title mbr-fonts-style pb-2 align-center display-7"><strong>
+                        Follow </strong>Us</h3>
                     <div class="soc-item">
                         <a href="https://www.instagram.com/braidbymamacita/" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(96, 96, 96); fill: rgb(96, 96, 96);"></span>
