--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <div class="mbr-white col-md-7">
                 </div>
             <div class="mbr-white col-md-7">
-                <p class="mbr-text align-center mbr-fonts-style display-7"><strong>YOU CAN NOW &nbsp;PROCEED WITH YOUR BOOKING. THANK YOU!</strong><br></p></div>
+                <p class="mbr-text align-center mbr-fonts-style display-7"><strong>YOU CAN NOW &nbsp;PROCEED WITH YOUR BOOKING. THANK YOU FOR CHOOSING US!</strong><br></p></div>
         </div>
     
      
