create github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
             <span class="navbar-logo">
-                <a href="https://mobirise.com">
+                <a href="index.html">
                     <img src="assets/images/pnggg-122x137.png" alt="Mobirise" title="" style="height: 4.9rem;">
                 </a>
             </span>
@@ -56,12 +56,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="index.html#header1-u">
                         Services
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="index.html#extFooter24-e">
                         About Us
                     </a>
                 </li>
@@ -71,7 +71,7 @@
                     </a>
                 </li></ul>
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://mobirise.com">BOOK NOW</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="index.html#custom-html-g">BOOK NOW</a></div>
       </div>
     </nav>
 </section>
@@ -92,7 +92,7 @@
             <span class="animated-element mbr-bold" data-word1="latest styles" data-word2="trending styles!" data-word3="keep it minimalist." data-word4="Lorem Ipsum" data-word5="Lorem Ipsum" data-speed="39" data-words="2">
             </span>
         </div>
-        <div class="mbr-section-btn pt-5"><a class="btn btn-lg btn-danger display-4" href="index.html#extFeatures8-3">BOOK NOW</a></div>
+        <div class="mbr-section-btn pt-5"><a class="btn btn-lg btn-danger display-4" href="index.html#custom-html-g">BOOK NOW</a></div>
     </div>
     
 </section>
@@ -277,7 +277,7 @@
                 </div>
                 <div class="social-list pb-3 align-center">
                     <h3 class="follow-title mbr-fonts-style pb-2 align-center display-7"><strong>
-                        Follow </strong>Us</h3>
+                        Follow Us</strong></h3>
                     <div class="soc-item">
                         <a href="https://www.instagram.com/braidbymamacita/" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(96, 96, 96); fill: rgb(96, 96, 96);"></span>
