--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="navbar-brand">
             <span class="navbar-logo">
-                <a href="index.html">
+                <a href="#top">
                     <img src="assets/images/pnggg-122x137.png" alt="Mobirise" title="" style="height: 4.9rem;">
                 </a>
             </span>
@@ -51,7 +51,7 @@
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="index.html">
                         Home
                     </a>
                 </li>
@@ -66,7 +66,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="index.html#extFooter24-e">
                         Testimonials
                     </a>
                 </li></ul>
