create github pages

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <span>9am - 9pm</span>
                     <span>9am - 9pm</span>
                     <span>9am - 9pm</span>
-                    <span>9am - 9pm</span>9am - 9pm<br><span>9am - 9pm</span><br>
+                    <span>9am - 9pm</span>9am - 9pm<br><span>Closed</span><br>
                 </div>
             </div>
             
