create github pages

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <span class="animated-element mbr-bold" data-word1="latest styles" data-word2="trending styles!" data-word3="keep it minimalist." data-word4="Lorem Ipsum" data-word5="Lorem Ipsum" data-speed="39" data-words="2">
             </span>
         </div>
-        <div class="mbr-section-btn pt-5"><a class="btn btn-lg btn-danger display-4" href="index.html#custom-html-g">BOOK NOW</a> <a class="btn btn-lg btn-white display-4" href="page2.html">SHOP NOW</a></div>
+        <div class="mbr-section-btn pt-5"><a class="btn btn-lg btn-danger display-4" href="index.html#custom-html-g">BOOK NOW</a> <a class="btn btn-lg btn-white display-4" href="shopedgecontrolgel.html">SHOP NOW</a></div>
     </div>
     
 </section>
@@ -277,7 +277,7 @@
             </div>
                 <div class="col-xl-9 col-lg-10">
                <p class="mbr-text mbr-fonts-style display-4">Edge Control is a firm fast drying gel used to sleek edges while penetrating follicles with natural oils to promote growth.</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger display-4" href="page2.html">SHOP NOW</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger display-4" href="shopedgecontrolgel.html">SHOP NOW</a></div>
                 </div>
                </div>
             </div>
