--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="mbr-white col-md-7">
                 <h1 class="mbr-section-title align-center mbr-bold mbr-fonts-style display-7">NEW JERSEY HOTTEST BRAIDERS, <br><br><span style="font-weight: normal;">We are the Braids &amp; Weaves Experts. We offer the latest &amp; trending styles! Thank you so much for choosing Us! We aim to please and to give the best quality services.</span></h1></div>
             <div class="mbr-white col-md-7">
-                <p class="mbr-text align-center mbr-fonts-style display-7"><strong>To ensure the best experience, please take your time and properly read the terms and conditions upon booking!</strong></p></div>
+                <p class="mbr-text align-center mbr-fonts-style display-7"><strong>To ensure the best experience, </strong><br><strong>PLEASE READ ALL POLICY BEFORE BOOKING&nbsp;!</strong></p></div>
         </div>
     
      
